--- a/config.yml.example
+++ b/config.yml.example
@@ -1,11 +1,11 @@
 MODE: 1             # 1: train, 2: test, 3: eval
 MODEL: 1            # 1: edge model, 2: inpaint model, 3: edge-inpaint model, 4: joint model
 MASK: 3             # 1: random block, 2: half, 3: external, 4: (external, random block), 5: (external, random block, half)
-EDGE: 1             # 1: canny, 2: external
-NMS: 1              # 0: no non-max-suppression, 1: applies non-max-suppression on the external edges by multiplying by Canny
+EDGE: 2             # 1: canny, 2: external
+NMS: 0              # 0: no non-max-suppression, 1: applies non-max-suppression on the external edges by multiplying by Canny
 SEED: 10            # random seed
 GPU: [0]            # list of gpu ids
-DEBUG: 0            # turns on debugging mode
+DEBUG: 0           # turns on debugging mode
 VERBOSE: 0          # turns on verbose mode in the output console
 
 TRAIN_FLIST: ./datasets/places2_train.flist
@@ -28,6 +28,8 @@ BATCH_SIZE: 8                 # input batch size for training
 INPUT_SIZE: 256               # input image size for training 0 for original size
 SIGMA: 2                      # standard deviation of the Gaussian filter used in Canny edge detector (0: random, -1: no edge)
 MAX_ITERS: 2e6                # maximum number of iterations to train the model
+MAX_STEPS: 3000               # maximum number of each epoch
+MAX_EPOCHES: 100              # maximum number of epoches
 
 EDGE_THRESHOLD: 0.5           # edge detection threshold
 L1_LOSS_WEIGHT: 1             # l1 loss weight
@@ -42,5 +44,5 @@ GAN_POOL_SIZE: 0              # fake images pool size
 SAVE_INTERVAL: 1000           # how many iterations to wait before saving model (0: never)
 SAMPLE_INTERVAL: 1000         # how many iterations to wait before sampling (0: never)
 SAMPLE_SIZE: 12               # number of images to sample
-EVAL_INTERVAL: 0              # how many iterations to wait before model evaluation (0: never)
+EVAL_INTERVAL: 25             # How many INTERVAL sample while valuation  (0: never  36000 in places)
 LOG_INTERVAL: 10              # how many iterations to wait before logging training status (0: never)
